--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.0.3",
+    "i": "^0.3.7",
+    "npm": "^9.1.2",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.6.6",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-router-dom": "^6.4.3",
